POR/RefEdge/src/objects/Contact_Attribute__c.object
<CustomObject>
    <description>Junction object for Contact and Attribute.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Attributes</relationshipLabel>
        <relationshipName>Contact_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Contact Attributes</relationshipLabel>
        <relationshipName>Contact_Attributes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Attribute</relationshipLabel>
        <relationshipName>Contact_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field would determine whether the record ws addes from the account or directly on the contact</description>
        <label>From Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_fromMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mapped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Basic_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Profile</label>
        <referenceTo>Reference_Basic_Information__c</referenceTo>
        <relationshipLabel>Contact Attributes</relationshipLabel>
        <relationshipName>Contact_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>